# cobie-nukem

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  default_bus_layout.tres  export_presets.cfg  project.godot
docs/: AGENTIC_GAMEDEV_BASELINE.md  AGENTIC_GAMEDEV_WORKFLOW.md  ARCHITECTURE.md  ART_BIBLE.md  ASSET_MANIFEST.md  AUTONOMOUS_STABILIZATION_GOAL.md  BLENDER_ASSET_PIPELINE.md  BUILD_AND_RELEASE.md  CONTENT_AUTHORING.md  DECISIONS.md  DEPLOYMENT.md  FABLE_NEXT_PASS_HANDOFF.md  GODOT_MCP_SETUP.md  IMPLEMENTATION_PLAN.md  INPUT_COMPATIBILITY.md  INPUT_INTEGRATION.md  KNOWN_ISSUES.md  LEVEL_AUTHORING_PIPELINE.md  MANUAL_UX_CHECKLIST.md  MOBILE_RELEASE_EVIDENCE.md  PHASE_1_2_EVIDENCE.md  PHASE_ROADMAP_PRD.md  PLAYTEST_GUIDE.md  PRD.md  QA_PLAN.md  RAIN_CITY_LEVEL2_QA_REPORT.md  RELEASE_0_11_0_ALPHA1_RC1_EVIDENCE.md  RELEASE_0_5_0_RC1_EVIDENCE.md  RELEASE_0_7_0_ALPHA1_RC1_EVIDENCE.md  RELEASE_0_7_0_ALPHA1_RC2_EVIDENCE.md  RELEASE_0_7_0_ALPHA1_RC3_EVIDENCE.md  RELEASE_0_7_0_ALPHA1_RC4_EVIDENCE.md  RELEASE_0_7_0_ALPHA1_RC5_EVIDENCE.md  RELEASE_0_8_0_ALPHA1_RC1_EVIDENCE.md  RELEASE_0_9_0_ALPHA1_RC1_EVIDENCE.md  RELEASE_AUDIT.md  RELEASE_NOTES.md  TESTING_FRAMEWORK_DECISION.md  TEST_EVIDENCE.md  TOOLCHAIN_SECURITY.md  (+2 more)
tests/: run_tests.gd  run_tests.gd.uid
tools/visual_quality/: capture.sh  capture_manifest.json  capture_tool.py  compare.sh  compare_captures.py  motion_matrix.sh  prepare_capture_project.py  pyproject.toml  test_capture_tool.py
tools/visual_quality/tests/: test_capture_tool.py  test_compare_captures.py  test_prepare_capture_project.py
(+1333 files in other folders)
