[build-system]
requires = ["setuptools>=68.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cobie-visual-quality"
version = "0.1.0"
description = "Deterministic visual quality capture and comparison tooling."
requires-python = ">=3.11"
dependencies = [
  "pillow==10.4.0",
  "numpy==2.1.2"
]

[tool.uv]
package = false
